# TextReigns

./: .gitignore  CMakeLists.txt  README.md  Structure
include/: king.h  reignpowers.h
src/: card.cpp  card.h  king.cpp  king.h  option.cpp  option.h  reign.cpp  reign.h  reignpowers.cpp  reignpowers.h
